--- a/package.json
+++ b/package.json
@@ -33,5 +33,20 @@
     "dev:hot": "webpack-dev-server --hot --inline --progress --colors --watch --display-error-details --display-cached --content-base ./",
     "test:watch": "npm run test -- --watch",
     "eject": "react-scripts eject"
-  }
+  },
+  "description": "## Overview",
+  "main": "webpack.config.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Harrison-Hughes/react-events-in-detail-lab-london-web-102819.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Harrison-Hughes/react-events-in-detail-lab-london-web-102819/issues"
+  },
+  "homepage": "https://github.com/Harrison-Hughes/react-events-in-detail-lab-london-web-102819#readme"
 }
